force-app/main/default/objects/sugati__Flight_Booking__c/sugati__Flight_Booking__c.object-meta.xml
<CustomObject>
    <label>Flight/Room Booking</label>
    <nameField>
        <displayFormat>FB-{0000000000}</displayFormat>
        <label>Flight Booking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flight/Room Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>