force-app/main/default/objects/sugati__Flight_Booking__c/fields/sugati__FB_Exchange_Rate_Look_Up__c.field-meta.xml
<CustomField>
    <fullName>sugati__FB_Exchange_Rate_Look_Up__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exchange Rate Look Up</label>
    <referenceTo>sugati__Exchange_Rate__c</referenceTo>
    <relationshipName>Flight_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>