force-app/main/default/objects/sugati__Flight_Booking__c/fields/sugati__FB_Group_Member__c.field-meta.xml
<CustomField>
    <fullName>sugati__FB_Group_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group Member</label>
    <referenceTo>sugati__Group_Member__c</referenceTo>
    <relationshipName>Flight_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>