force-app/main/default/objects/sugati__Flight_Booking__c/fields/sugati__FB_Group_Member_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__FB_Group_Member_Name__c</fullName>
    <formula>sugati__FB_Group_Member__r.sugati__GM_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Member Name</label>
    <type>Text</type>
</CustomField>