force-app/main/default/objects/sugati__Flight_Booking__c/fields/sugati__FB_MarkedUp_Cost__c.field-meta.xml
<CustomField>
    <fullName>sugati__FB_MarkedUp_Cost__c</fullName>
    <label>Marked-Up Cost In Selling Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>