force-app/main/default/objects/sugati__Flight_Booking__c/fields/sugati__FB_Net_Cost_in_Selling_Currency__c.field-meta.xml
<CustomField>
    <fullName>sugati__FB_Net_Cost_in_Selling_Currency__c</fullName>
    <label>Net Cost in Selling Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>