force-app/main/default/objects/sugati__Flight_Booking__c/fields/sugati__FB_Rate__c.field-meta.xml
<CustomField>
    <fullName>sugati__FB_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Rate record which is used in the allocation.</inlineHelpText>
    <label>Rate</label>
    <referenceTo>sugati__RA_Rate__c</referenceTo>
    <relationshipName>Room_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>