force-app/main/default/objects/sugati__Flight_Booking__c/fields/sugati__FB_Room_No__c.field-meta.xml
<CustomField>
    <fullName>sugati__FB_Room_No__c</fullName>
    <label>Room No.</label>
    <length>30</length>
    <type>Text</type>
</CustomField>