force-app/main/default/objects/sugati__Flight_Booking__c/fields/sugati__FB_Supplier_Booking__c.field-meta.xml
<CustomField>
    <fullName>sugati__FB_Supplier_Booking__c</fullName>
    <label>Supplier Booking</label>
    <referenceTo>sugati__Supplier_Booking__c</referenceTo>
    <relationshipName>Flight_Bookings1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>