force-app/main/default/objects/sugati__Flight_Booking__c/fields/sugati__FB_Supplier_Cost__c.field-meta.xml
<CustomField>
    <fullName>sugati__FB_Supplier_Cost__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Cost</label>
    <referenceTo>sugati__Supplier_Cost__c</referenceTo>
    <relationshipName>Flight_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>