force-app/main/default/objects/sugati__Flight_Booking__c/fields/sugati__FB_Ticket_No__c.field-meta.xml
<CustomField>
    <fullName>sugati__FB_Ticket_No__c</fullName>
    <label>Ticket No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>