force-app/main/default/objects/sugati__Flight_Booking__c/recordTypes/sugati__Dom_Flight.recordType-meta.xml
<RecordType>
    <fullName>sugati__Dom_Flight</fullName>
    <active>true</active>
    <description>Domestic Flights</description>
    <label>Dom Flight</label>
</RecordType>