force-app/main/default/objects/sugati__Flight_Booking__c/recordTypes/sugati__Int_Flight.recordType-meta.xml
<RecordType>
    <fullName>sugati__Int_Flight</fullName>
    <active>true</active>
    <description>International Flight</description>
    <label>Int Flight</label>
</RecordType>