force-app/main/default/objects/sugati__Flight_Booking__c/recordTypes/sugati__Light_Aircraft.recordType-meta.xml
<RecordType>
    <fullName>sugati__Light_Aircraft</fullName>
    <active>true</active>
    <label>Light Aircraft</label>
</RecordType>